--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
   <title>jQuery Typography Troll</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script src="https://raw.github.com/mcoconnor/jquery-typographytroll/master/jquery.typographytroll.js" type="text/javascript"></script>
-  <!--
-  <script src="cufon-yui.js" type="text/javascript"></script>
-  <script src="Nimbus_Sans_L_400.font.js" type="text/javascript"></script>
-  -->
 
   <style type="text/css">
     body {
@@ -38,7 +34,6 @@
 
   <script>
     $(function(){$('div.demo').typographyTroll()});
-    //Cufon.replace('body', { fontFamily: 'Nimbus Sans L' });
   </script>
 
 </head>
@@ -90,14 +85,16 @@
 
   </div>
 
-<script type=\"text/javascript\">
-var gaJsHost = ((\"https:\" == document.location.protocol) ? \"https://ssl.\" : \"http://www.\");
-document.write(unescape(\"%3Cscript src='\" + gaJsHost + \"google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E\"));
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-3316429-6']);
+  _gaq.push(['_trackPageview']);
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
 </script>
-<script type=\"text/javascript\">
-try {
-var pageTracker = _gat._getTracker("UA-3316429-6");
-pageTracker._trackPageview();
-} catch(err) {}</script>"
 </body>
 </html>
